--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ bing_verification:
 animated:             false
 show_related_posts:   false
 show_post_footers:    false
-show_social_icons:    false
+show_social_icons:    true
 ajaxify_contact_form: false
 enable_mathjax: false
 extended_fonts: false
@@ -42,14 +42,14 @@ facebook_appid:
 facebook_comments_number: 10
 
 # Social icons
-github_username:
+github_username: dimastopel
 bitbucket_username:
 stackoverflow_id:
-twitter_username:
+twitter_username: bravo102
 skype_username:
 steam_nickname:
 google_plus_id:
-linkedin_username:
+linkedin_username: dimastopel
 angellist_username:
 medium_id:
 bitcoin_url:
@@ -57,24 +57,25 @@ paypal_url:
 flattr_button:
 
 # Post sharing icons
-show_sharing_icons: false
+show_sharing_icons: true
 # Change to 'true' to enable individual icons
-share_facebook: false
-share_twitter: false
-share_googleplus: false
-share_linkedin: false
+share_facebook: true
+share_twitter: true
+share_googleplus: true
+share_linkedin: true
 share_digg: false
 share_tumblr: false
-share_reddit: false
+share_reddit: true
 share_stumbleupon: false
-share_hackernews: false
+share_hackernews: true
 
 text:
   pagination:
     newer: 'Newer'
     older: 'Older'
   share_buttons:
-    text:         'Share this post!'
+#    text:         'Share this post!'
+    text:         ''
     facebook:     'Share on Facebook'
     twitter:      'Share on Twitter'
     googleplus:   'Share on Google+'
