--- a/_config.yml
+++ b/_config.yml
@@ -33,13 +33,14 @@ fb_page_id:
 
 # Disqus post comments
 # (leave blank to disable Disqus)
-disqus_shortname: dima-stopel-org
+#disqus_shortname: dima-stopel-org
+disqus_shortname: 
 
 # Facebook Comments plugin
 # (leave blank to disable Facebook Comments, otherwise set it to true)
 facebook_comments:
 facebook_appid:
-facebook_comments_number: 10
+facebook_comments_number: 
 
 # Social icons
 github_username: dimastopel
@@ -57,15 +58,15 @@ paypal_url:
 flattr_button:
 
 # Post sharing icons
-show_sharing_icons: true
+show_sharing_icons: false
 # Change to 'true' to enable individual icons
-share_facebook: true
+share_facebook: false
 share_twitter: true
-share_googleplus: true
-share_linkedin: true
+share_googleplus: false
+share_linkedin: false
 share_digg: false
 share_tumblr: false
-share_reddit: true
+share_reddit: false
 share_stumbleupon: false
 share_hackernews: true
 
@@ -91,16 +92,16 @@ text:
     related_posts:  'Related Posts'
   index:
     coming_soon: 'Coming soon...'
-  contact:
-    email:    'Email Address'
-    content:  'What would you like to say?'
-    subject:  'New submission!'
-    submit:   'Say Hello'
-    ajax:
-      sending:  'sending..'
-      sent:     'Message sent!'
-      error:    'Error!'
-  thanks: 'Thanks for contacting me. I will reply as soon as possible.'
+  #contact:
+  #  email:    'Email Address'
+  #  content:  'What would you like to say?'
+  #  subject:  'New submission!'
+  #  submit:   'Say Hello'
+  #  ajax:
+  #    sending:  'sending..'
+  #    sent:     'Message sent!'
+  #    error:    'Error!'
+  #thanks: 'Thanks for contacting me. I will reply as soon as possible.'
   og_locale: 'en_US'
 
 # Build settings
