--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title:       "Dima Stopel: new things I learned"
+title:       "Dima Stopel: random stuff"
 email:       dima@stopel.org
 author:      Dima Stopel
 description: "Dima Stopel's personal blog"
